--- a/index.html
+++ b/index.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tonay Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Otomanopee+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="top">
+        <div class="half">
+            <h1>Welcome to</h1>
+            <h2 class="orange">Tonay Sarkar's World! Bingoo!!</h2>
+            <h3>Noob Web Developer</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit culpa quos iure dignissimos! Odio, quod
+                nihil dolorem vero quasi ex atque dignissimos sit voluptatem doloribus itaque architecto iure
+                accusantium
+                necessitatibus.</p>
+            <a class="link-button" target="_black" href="https://www.linkedin.com/in/tonay29/">Hire Me!</a>
+        </div>
+        <div class="half img"><img src="images/my-bg (1).png" alt=""></div>
+    </section>
+
+
+
+
 </body>
+
 </html>
