--- a/index.html
+++ b/index.html
@@ -27,7 +27,21 @@
         <div class="half img"><img src="images/my-bg (1).png" alt=""></div>
     </section>
 
-
+    <section class="dream">
+        <div class="half">
+            <img src=" images/my-bg.png" alt="">
+        </div>
+        <div class="half">
+            <h1>Dream Big</h1>
+            <h2>
+                Become a Web Developer!
+            </h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae eum veniam, minus voluptate
+                incidunt, odit reprehenderit ducimus ab, nobis qui earum veritatis deleniti! Enim laborum est
+                voluptatem, provident illo aspernatur?</p>
+            <a class="link-button" target="_blank" href="">Download Resume</a>
+        </div>
+    </section>
 
 
 </body>
