--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top">
+    <section class="top flexible-container">
         <div class="half">
             <h1>Welcome to</h1>
             <h2 class="orange">Tonay Sarkar's World! Bingoo!!</h2>
@@ -27,7 +27,7 @@
         <div class="half img"><img src="images/my-bg (1).png" alt=""></div>
     </section>
 
-    <section class="dream">
+    <section class="dream flexible-container">
         <div class="half">
             <img src=" images/my-bg.png" alt="">
         </div>
@@ -42,6 +42,31 @@
             <a class="link-button" target="_blank" href="">Download Resume</a>
         </div>
     </section>
+
+    <section class="experience">
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div id="border" class="experience-item">
+                <h2>Full Stack Web Developer</h2>
+                <h3 class="orange">2022-present | Pro Level Developer</h3>
+                <p>
+                    I am the master of HTML, CSS ams JAVASCRIPT.I dont stop learning.I even know the deployment, server
+                    and
+                    security.I will give you 100% web solution.
+                </p>
+            </div>
+            <div id="border2" class="experience-item">
+                <h2>Noob Web Developer</h2>
+                <h3 class="orange">2022-2024 | Programming Hero Learner</h3>
+                <p>They didn't offer me a job.But i made myself strong in html , css and web development field.now i can
+                    make a fundamental website for you.</p>
+            </div>
+        </div>
+
+    </section>
+    <footer>
+        <p>© Tonay Kumar Sarkar 2021,a Programming Hero Initiative</p>
+    </footer>
 
 
 </body>
